# geometrical_stem_detection

./: LICENSE.txt  README.md
gstemdet/: CMakeLists.txt  README.md  package.xml
gstemdet/include/: InputParser.h  algorithm.h  leaf.h  plant.h  stem.h  tools.h
gstemdet/src/: CMakeLists.txt  algorithm.cpp  example.cpp  leaf.cpp  plant.cpp  stem.cpp  tools.cpp
piros_stemdet/: .clang_complete  CMakeLists.txt  README.md  package.xml
piros_stemdet/config/: stemdetection_default.yaml  stemecho_default.yaml
piros_stemdet/include/: tictoc.h
piros_stemdet/include/stemdetection/: stemdetection.hpp
piros_stemdet/include/stemecho/: stemecho.hpp
piros_stemdet/launch/: example.launch  standalone.launch
piros_stemdet/msg/: Stem.msg  Stems.msg
piros_stemdet/src/stemdetection/: stemdetection.cpp  stemdetection_node.cpp
piros_stemdet/src/stemecho/: stemecho.cpp  stemecho_node.cpp
piros_vegsec/: CMakeLists.txt  README.md  package.xml
piros_vegsec/config/: piros_vegsec.yaml
piros_vegsec/include/: vegsec.h  vegsec_handler.h
piros_vegsec/launch/: piros_vegsec.launch  piros_vegsec_debug.launch
piros_vegsec/src/: vegsec.cpp  vegsec_handler.cpp  vegsec_node.cpp
piros_vegsec/test/: vegsec_test.cpp
